cmake_minimum_required(VERSION 2.8)
include_directories(common)
include_directories(${CMAKE_SOURCE_DIR}/core)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(c++_wrapper)
add_subdirectory(c++_wrapper_client)
if(WIN32 AND C_SHARP_LIB)
	add_subdirectory(c_sharp_wrapper)
endif()
if(C_API)
	add_subdirectory(c_api_interface)
endif()
